updated docs and refactored
